# ray

./: .env.example  .gitignore  README.md  Taskfile.yml  pyproject.toml
config/: auth_views.py  settings.py  storage_backends.py  urls.py  views.py
deploy/: production.env.example
docs/: feauture-looking-ahead  ray-mobile-app-store.md
moments/: access.py  admin.py  apps.py  models.py  notifications.py  permissions.py  push.py  serializers.py  solar.py  tests.py  views.py
moments/migrations/: 0001_initial.py  0002_moment_bible_verse.py  0003_profile.py  0004_alter_moment_kind.py  0005_alter_moment_visibility_mode_friendship.py  0006_moment_looking_ahead.py  0007_notification.py  0008_pushdevice.py
nginx/: nginx-production.conf
ray-mobile/: .env.example  app-version.json  app.config.ts  app.json  package-lock.json  package.json
ray-mobile/app/: _layout.tsx  login.tsx
ray-mobile/app/(app)/: _layout.tsx  friends.tsx  index.tsx  notifications.tsx  (+2 more)
ray-mobile/components/: AspectFitImage.tsx  CreateMomentScreen.tsx  FloatingLoveHeart.tsx  MemoryShareArtifact.tsx  RayLogo.tsx  StyledText.tsx
ray-mobile/constants/: theme.ts
ray-mobile/contexts/: AuthContext.tsx
ray-mobile/lib/: api.ts  formatSmartDate.ts  push.ts  sunTimes.ts  truncateWords.ts
ray-mobile/scripts/: sync-native-version.mjs
ray-web/: .env.example  index.html  package-lock.json  package.json
ray-web/src/: App.css  App.tsx  api.ts  formatSmartDate.ts  index.css  truncateWords.ts  vite-env.d.ts
supervisorctl/: supervisord.conf
visual/: identity  ray  ray-icon.psd  ray-splash.psd
(+16 files in other folders)
